--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-zooom": "^1.3.5",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
