--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
+    "react-auth-code-input": "^3.2.1",
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-image-zooom": "^1.3.5",
